# rust-pgcopy

./: CHANGELOG.md  Cargo.toml  README.md
examples/: serializer.rs
src/: encoder.rs  encoder_old.rs  error.rs  lib.rs  serializer.rs  writer.rs
src/encoder/: mod.rs
src/encoder/tests/: boolean.rs  bytes.rs  date.rs  macaddr.rs  macaddr8.rs  mod.rs  numeric.rs  time.rs  timestamp.rs  uuid.rs
src/tests/: encoder.rs  mod.rs  writer.rs
src/tests/encoder/: binary.rs  chars.rs  mod.rs
src/tests/encoder/ext/: bigdecimal.rs  chrono.rs  mod.rs  uuid.rs
src/types/: bigdecimal.rs  chrono.rs  mod.rs  uuid.rs
src/types/implementation/: bigdecimal.rs  date.rs  macaddr.rs  macaddr8.rs  mod.rs  numeric.rs  serde_json.rs  time.rs  timestamp.rs  uuid.rs
