[package]
name = "pgcopy"
description = "PostgreSQL binary COPY format generator"
version = "0.0.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
readme = "README.md"
keywords = ["database", "protocol", "binary", "serialization", "serde"]
homepage = "https://github.com/svartalf/rust-pgcopy"
repository = "https://github.com/svartalf/rust-pgcopy.git"
documentation = "https://docs.rs/pgcopy/"
categories = ["encoding", "database"]
license = "Apache-2.0 OR MIT"
exclude = [".travis.yml", ".gitignore"]

[features]
default = []
with-uuid = ["uuid"]
with-chrono = ["chrono"]

# This feature is used only for testing.
# *DO NOT* use it in a real life, always set required features manually.
all = ["with-uuid", "with-chrono"]

[dependencies]
byteorder = "1"
serde = "1.0"
uuid = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
serde_derive = "1.0"
